Add ROM file and complete audio/input implementation
- Remove ROM file exclusion from .gitignore to allow committing offroad.n64
- Add comprehensive audio system with AudioWorklet
- Implement complete N64 input mapping for keyboard and gamepad
- Update UI with detailed control scheme documentation
- Add audio controls (mute, volume, info display)
- Include WASM source directories for emulator cores
- Add blog post documentation
- Update favicon and demo video

--- a/.gitignore
+++ b/.gitignore
@@ -16,10 +16,10 @@ dist/
 .env.local
 .env.*.local
 
-# ROM files (do NOT commit ROMs)
-*.z64
-*.n64
-*.v64
+# WASM source repositories (keep these local only)
+wasm/GLideN64/
+wasm/N64Wasm/
+wasm/mupen64plus-libretro-nx/
 
 # WASM build artifacts
 public/core.js
